# corrective_rag

./: .env.example  .gitignore  CHANGELOG_CORRECTIVE_RAG.md  CORRECTIVE_RAG.md  Makefile  OPENAI_EMBEDDINGS.md  QUICKSTART.md  README.md  SUMMARY.md  VISUAL_GUIDE.md  cli.py  comparison_results_for_slides.md  demo.py  demo_chunks_analysis.py  main.py  pyproject.toml  test_installation.py
examples/: DEMO_NOTES_VI.md  comparison_demo.py  comparison_demo_advanced_vi.py  demo.py  demo_corrective_rag.py  demo_openai.py
examples/sample_documents/: iphone14_airplay.txt  iphone14_lightning_port.txt  iphone14_mute_switch.txt
src/: __init__.py  api.py  cli.py  corrective_rag_system.py  rag_system.py
tests/: test_rag_system.py
